# python-project-template

./: Containerfile  README.md  pyproject.toml
.github/: init.sh  template.yml
.github/workflows/: main.yml
